<resources>
    <string name="app_name">Wall Street</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="version">version</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_app">new app is ready</string>
    <string name="reload_app">Reload App</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Dont have Account ?</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sponsor">Sponsor</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="secondary_password">Secondary Password</string>
    <string name="confirmation_secondary_password">Confirmation Secondary Password</string>
    <string name="do_you_have_account">do you have account?</string>
    <string name="reset_password_will_send_link_to_email_address">Reset password will send link to email address</string>
    <string name="add_new_user">Invite and extend your network for more profit!</string>
    <string name="balance">Balance</string>
    <string name="packages">Packages</string>
    <string name="upgrade">Top Up</string>
    <string name="invite">Invite</string>
    <string name="send">Send</string>
    <string name="currency">Currency</string>
    <string name="description">Description</string>
    <string name="dollar_example">$ 100</string>
    <string name="icon">Icon</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>
    <string name="ltc">LTC</string>
    <string name="doge">Doge</string>
    <string name="btc_wall">BTC Wall</string>
    <string name="eth_wall">ETH Wall</string>
    <string name="ltc_wall">LTC Wall</string>
    <string name="doge_wall">Doge Wall</string>
    <string name="idr">IDR</string>
    <string name="doge_wallet">DogeCoin Wallet</string>
    <string name="btc_wallet">Bitcoin Wallet</string>
    <string name="eth_wallet">Ethereum Wallet</string>
    <string name="ltc_wallet">LiteCoin Wallet</string>
    <string name="camel_wallet">Camel Wallet</string>
    <string name="ic_dollar">$</string>
    <string name="str_dollar">USD</string>
    <string name="zero">0</string>
    <string name="top_up">Top Up</string>
    <string name="wallet">Enter Wallet</string>
    <string name="amount">Enter Amount</string>
    <string name="description_qr">press logo to open barcode scan</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_secondary_password">Edit Secondary Password</string>
    <string name="logout">Logout</string>
    <string name="edit">EDIT</string>
    <string name="add_user">Add User</string>
    <string name="camel">Camel</string>
    <string name="history_wall">History Wall</string>
    <string name="history_coin">History Coin</string>
    <string name="history_top_up">History TopUp</string>
    <string name="camel_wall">Camel Wall</string>
    <string name="tron">Tron</string>
    <string name="verification_link_send_via_email">Verification link send via email</string>
    <string name="resend_email_verification">Resend Email Verification</string>
    <string name="preview">Preview</string>

    <string-array name="currency_choice">
        <item>BitCoin</item>
        <item>LiteCoin</item>
        <item>Ethereum</item>
        <item>DogeCoin</item>
        <item>Camel</item>
    </string-array>
</resources>