<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@color/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="10dp"
        android:elevation="10dp">

      <TextView
          android:id="@+id/textViewDescription"
          android:text="@string/login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:textStyle="bold"
          android:textSize="20sp"
          android:gravity="center"/>

      <TextView
          android:text="@string/version"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:textStyle="bold"
          android:textSize="12sp"
          android:gravity="end"
          android:id="@+id/textViewVersion"
          android:layout_marginBottom="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:hint="@string/username"
          android:autofillHints="@string/username"
          android:layout_marginBottom="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPassword"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:hint="@string/password"
          android:autofillHints="@string/password"
          android:layout_marginBottom="25dp"/>

      <Button
          android:text="@string/login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonLogin"
          android:background="@drawable/button"/>

      <Button
          android:visibility="gone"
          android:text="@string/new_app"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonUpdate"
          android:background="@drawable/button"/>

      <Button
          android:visibility="gone"
          android:text="@string/reload_app"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonReloaded"
          android:background="@drawable/button"/>

      <TextView
          android:text="@string/forgot_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="textEnd"
          android:textStyle="bold"
          android:textColor="@color/White"
          android:id="@+id/textViewForgotPassword"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="5dp"/>

      <TextView
          android:text="@string/resend_email_verification"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="textEnd"
          android:textStyle="bold"
          android:textColor="@color/White"
          android:id="@+id/textViewSendEmailVerification"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="35dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutContainerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

      <TextView
          android:text="@string/dont_have_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textStyle="bold"
          android:textSize="18sp"
          android:textColor="@color/White"/>

      <TextView
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textStyle="bold"
          android:textSize="20sp"
          android:textColor="@color/colorAccent"
          android:id="@+id/textViewRegister"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="35dp"/>

  </LinearLayout>

</ScrollView>