<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrationActivity"
    android:background="@color/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/card"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:elevation="10dp">

      <TextView
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:textStyle="bold"
          android:textSize="18sp"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextSponsor"
          android:hint="@string/sponsor"
          android:autofillHints="@string/sponsor"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:hint="@string/username"
          android:autofillHints="@string/username"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextName"
          android:hint="@string/name"
          android:autofillHints="@string/name"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:ems="10"
          android:id="@+id/editTextEmail"
          android:hint="@string/email_address"
          android:autofillHints="@string/email_address"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:ems="10"
          android:id="@+id/editTextPhone"
          android:hint="@string/phone_number"
          android:autofillHints="@string/phone_number"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPassword"
          android:hint="@string/password"
          android:autofillHints="@string/password"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextConfirmationPassword"
          android:hint="@string/confirmation_password"
          android:autofillHints="@string/confirmation_password"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberPassword"
          android:ems="10"
          android:id="@+id/editTextNumberPassword"
          android:hint="@string/secondary_password"
          android:autofillHints="@string/secondary_password"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:maxLength="6"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberPassword"
          android:ems="10"
          android:id="@+id/editTextConfirmationSecondaryPassword"
          android:hint="@string/confirmation_secondary_password"
          android:autofillHints="@string/confirmation_secondary_password"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:maxLength="6"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="20dp"/>

      <Button
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonRegister"
          android:background="@drawable/button"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"/>

    <TextView
        android:text="@string/do_you_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/White"/>

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:id="@+id/textVIewLogin"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="35dp"/>

  </LinearLayout>

</ScrollView>