<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.RegisteredActivity"
    android:background="@color/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/card"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:hint="@string/username"
          android:autofillHints="@string/username"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:ems="10"
          android:id="@+id/editTextEmail"
          android:hint="@string/email_address"
          android:autofillHints="@string/email_address"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="10dp"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextName"
          android:hint="@string/name"
          android:autofillHints="@string/name"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="10dp"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:ems="10"
          android:id="@+id/editTextPhone"
          android:hint="@string/phone_number"
          android:autofillHints="@string/phone_number"
          android:background="@drawable/edit_text"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/buttonRegister"
        android:background="@drawable/button"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

  </LinearLayout>

</ScrollView>