<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EmailVerificationActivity"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

  <ImageView
      android:layout_width="100dp"
      android:layout_height="100dp"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      android:contentDescription="@string/logo"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="5dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/card"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:padding="10dp"
      android:elevation="10dp">

    <TextView
        android:text="@string/verification_link_send_via_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/email_address"
        android:autofillHints="@string/email_address"
        android:layout_marginBottom="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <Button
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSend"
        android:background="@drawable/button"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

</LinearLayout>