<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.EditPasswordActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">

  <Space
      android:layout_width="match_parent"
      android:layout_height="5dp"/>

  <ImageView
      android:layout_width="100dp"
      android:layout_height="100dp"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      android:id="@+id/imageView"
      android:contentDescription="@string/logo"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="5dp"/>

  <LinearLayout
      android:id="@+id/containerUpdatePassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/card2"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:padding="10dp"
      android:elevation="10dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/editTextSecondaryPasswordRequired"
        android:autofillHints="@string/secondary_password"
        android:hint="@string/secondary_password"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:maxLength="6"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:background="@drawable/edit_text"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextConfirmationPassword"
        android:autofillHints="@string/confirmation_password"
        android:hint="@string/confirmation_password"
        android:background="@drawable/edit_text"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:text="@string/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUpdatePassword"
        android:background="@drawable/button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="10dp"/>

  <LinearLayout
      android:id="@+id/containerUpdateSecondaryPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/card2"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:padding="10dp"
      android:elevation="10dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/editTextSecondaryPassword"
        android:autofillHints="@string/secondary_password"
        android:hint="@string/secondary_password"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:maxLength="6"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/editTextConfirmationSecondaryPassword"
        android:autofillHints="@string/confirmation_secondary_password"
        android:hint="@string/confirmation_secondary_password"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:maxLength="6"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:text="@string/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUpdateSecondaryPassword"
        android:background="@drawable/button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="10dp"/>

</LinearLayout>